add more tooling

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,4 @@
-.PHONY: all
-all: mandelbrot
-
-mandelbrot: mandelbrot.c
-	gcc -o mandelbrot -std=c11 -O2 mandelbrot.c -lm
-
-.PHONY: clean
-clean:
-	rm mandelbrot mandelbrot.ppm
+rm *.ppm
+rm mandelbrot
+rm mandelbrot_py.c
+rm mandelbrot_py
